--- a/report.html
+++ b/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,90264],[],[[4,0,0,[],[1,453,11962],[]],[5,0,0,[],[1,12416,9853],[]],[6,0,0,[],[1,22269,10026],[]],[7,0,0,[],[1,32296,9063],[]],[8,0,0,[],[1,41360,9553],[]],[9,0,0,[],[1,50913,10738],[]],[10,0,0,[],[1,61651,11317],[]],[11,0,0,[],[1,72969,10986],[]],[12,0,0,[],[1,83955,6308],[]]],[],[9,9,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,6587],[],[[4,0,0,[],[1,146,6440],[]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Workshop1","*/Users/inew/Documents/Automate/Workshop1.robot","*Workshop1.robot","*TC000-Show Defult Page","*TC001-Input email pass","*TC002-Input email fail","*TC003-Input password more than 5 digits","*TC004-Input password more less 5 digits","*TC005-Web login pass","*TC006-Web login fail","*TC007-Check require field","*TC008-Click hyperlink Create an account"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Workshop1","*/Users/inew/Documents/Automate/Workshop1.robot","*Workshop1.robot","*TC008-Click Hyperlink Create an account"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:01:30","fail":0,"label":"All Tests","pass":9,"skip":0}],[],[{"elapsed":"00:01:30","fail":0,"id":"s1","label":"Workshop1","name":"Workshop1","pass":9,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:06","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:07","fail":0,"id":"s1","label":"Workshop1","name":"Workshop1","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1683971381080;
+window.output["baseMillis"] = 1684060769801;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 90287;
+window.output["generated"] = 6592;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
