--- a/report.html
+++ b/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,6587],[],[[4,0,0,[],[1,146,6440],[]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,88211],[],[[4,0,0,[],[1,540,5983],[]],[5,0,0,[],[1,6524,9819],[]],[6,0,0,[],[1,16344,10077],[]],[7,0,0,[],[1,26421,10723],[]],[8,0,0,[],[1,37144,11215],[]],[9,0,0,[],[1,48360,11008],[]],[10,0,0,[],[1,59369,11338],[]],[11,0,0,[],[1,70708,11055],[]],[12,0,0,[],[1,81764,6445],[]]],[],[9,9,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Workshop1","*/Users/inew/Documents/Automate/Workshop1.robot","*Workshop1.robot","*TC008-Click Hyperlink Create an account"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Workshop1","*/Users/inew/Documents/Automate/Workshop1.robot","*Workshop1.robot","*TC000-Show Defult Page","*TC001-Input email pass","*TC002-Input email fail","*TC003-Input password more than 5 digits","*TC004-Input password more less 5 digits","*TC005-Web login pass","*TC006-Web login fail","*TC007-Check require field","*TC008-Click Hyperlink Create an account"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:06","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:07","fail":0,"id":"s1","label":"Workshop1","name":"Workshop1","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:01:28","fail":0,"label":"All Tests","pass":9,"skip":0}],[],[{"elapsed":"00:01:28","fail":0,"id":"s1","label":"Workshop1","name":"Workshop1","pass":9,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1684060769801;
+window.output["baseMillis"] = 1684174361595;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 6592;
+window.output["generated"] = 88237;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
