Web UI Automation Test
    reword 09084ad #
    reword 2b86ad9 Web UI Automation Test
	new file:   .DS_Store
	new file:   TC-regmsu.robot
	modified:   Test.robot
	new file:   Web UI Automation Test/Test.robot
	new file:   Web UI Automation Test/log.html
	new file:   Web UI Automation Test/output.xml
	new file:   Web UI Automation Test/report.html
	new file:   Web UI Automation Test/selenium-screenshot-1.png
	new file:   Web UI Automation Test/selenium-screenshot-2.png
	new file:   Web UI Automation Test/selenium-screenshot-3.png
	new file:   Web UI Automation Test/selenium-screenshot-4.png
	new file:   Web UI Automation Test/selenium-screenshot-5.png
	new file:   Web UI Automation Test/selenium-screenshot-6.png
	modified:   Workshop1.robot
	modified:   log.html
	modified:   output.xml
	modified:   report.html
	new file:   selenium-screenshot-10.png
	new file:   selenium-screenshot-11.png
	new file:   selenium-screenshot-12.png
	new file:   selenium-screenshot-13.png
	new file:   selenium-screenshot-14.png
	new file:   selenium-screenshot-15.png
	new file:   selenium-screenshot-16.png
	new file:   selenium-screenshot-17.png
	new file:   selenium-screenshot-18.png
	new file:   selenium-screenshot-19.png
	new file:   selenium-screenshot-4.png
	new file:   selenium-screenshot-5.png
	new file:   selenium-screenshot-6.png
	new file:   selenium-screenshot-7.png
	new file:   selenium-screenshot-8.png
	new file:   selenium-screenshot-9.png

--- a/Web UI Automation Test/report.html
+++ b/Web UI Automation Test/report.html
@@ -1887,22 +1887,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,8130],[],[[4,0,0,[],[1,167,7962],[]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,47142],[],[[4,0,0,[],[1,415,10233],[]],[5,0,0,[],[1,10649,11694],[]],[6,0,0,[],[1,22344,24796],[]]],[],[3,3,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Workshop1","*/Users/inew/Documents/Automate/Workshop1.robot","*Workshop1.robot","*TC008-Click Hyperlink Create an account"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Test","*/Users/inew/Documents/Automate/Web UI Automation Test/Test.robot","*Test.robot","*TC000-Show Defult Page","*TC001-Show Login Popup","*TC002-Login System"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:08","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:08","fail":0,"id":"s1","label":"Workshop1","name":"Workshop1","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:47","fail":0,"label":"All Tests","pass":3,"skip":0}],[],[{"elapsed":"00:00:47","fail":0,"id":"s1","label":"Test","name":"Test","pass":3,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1734804279131;
+window.output["baseMillis"] = 1734809307203;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 8134;
+window.output["generated"] = 47151;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
